update html templates to have behaviour

--- a/Framework/Flask/food_tracker/templates/day.html
+++ b/Framework/Flask/food_tracker/templates/day.html
@@ -34,9 +34,10 @@
 
       <div class="row">
         <div>
+
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title">January 28, 2017</h3>
+              <h3 class="panel-title">{{ date }}</h3>
             </div>
 
             <div class="panel-body">
