--- a/Framework/Flask/food_tracker/templates/home.html
+++ b/Framework/Flask/food_tracker/templates/home.html
@@ -37,7 +37,7 @@
           <form method="POST" action="/">
             <div class="form-group">
               <label for="new-day">New Day</label>
-              <input type="date" class="form-control" id="new-day">
+              <input type="date" class="form-control" name="date" id="new-day">
             </div>
 
             <button type="submit" class="btn btn-primary">Add</button>
@@ -45,9 +45,10 @@
 
           <div class="page-header"></div>
 
+          {% for r in results %}
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title">January 28, 2017</h3>
+              <h3 class="panel-title"> {{ r.entry_date }} </h3>
             </div>
             <div class="panel-body">
               <ul class="nav nav-pills" role="tablist">
@@ -59,6 +60,7 @@
               </ul>
             </div>
           </div>
+          {% endfor %}
         </div>
       </div>
 
