--- a/Framework/Flask/food_tracker/templates/day.html
+++ b/Framework/Flask/food_tracker/templates/day.html
@@ -42,10 +42,12 @@
 
             <div class="panel-body">
 
-              <form method="POST" action="/">
+              <form method="POST" action="{{url_for('view', date='20230617')}}">
                 <div class="form-group">
-                  <select class="form-control">
-                    <option>1</option>
+                  <select class="form-control" name="food_select">
+                    {% for food in food_results%}
+                    <option value={{food.id}}>{{food.name}}</option>
+                    {% endfor %}
                   </select>
                 </div>
 
