--- a/Framework/Flask/food_tracker/templates/day.html
+++ b/Framework/Flask/food_tracker/templates/day.html
@@ -37,12 +37,12 @@
 
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title">{{ date }}</h3>
+              <h3 class="panel-title">{{ pretty_date }}</h3>
             </div>
 
             <div class="panel-body">
 
-              <form method="POST" action="{{url_for('view', date='20230617')}}">
+              <form method="POST" action="{{url_for('view', date='entry_date')}}">
                 <div class="form-group">
                   <select class="form-control" name="food-select">
                     {% for food in food_results%}
@@ -59,26 +59,26 @@
 
               <ul class="nav nav-pills" role="tablist">
                 <li class="active"><a>Total</a></li>
-                <li><a>Protein: <span class="badge">100</span></a></li>
-                <li><a>Carbohydates: <span class="badge">200</span></a></li>
-                <li><a>Fat: <span class="badge">50</span></a></li>
-                <li><a>Calories: <span class="badge">1650</span></a></li>
+                <li><a>Protein: <span class="badge">{{totals.protein}}</span></a></li>
+                <li><a>Carbohydates: <span class="badge">{{totals.carbohydrates}}</span></a></li>
+                <li><a>Fat: <span class="badge">{{totals.fats}}</span></a></li>
+                <li><a>Calories: <span class="badge">{{totals.calories}}</span></a></li>
               </ul>
 
             </div>
 
             <div class="page-header"></div>
-
+            {% for food in log_results %}
             <div class="panel-body">
               <ul class="nav nav-pills" role="tablist">
-                <li class="active"><a>Pizza</a></li>
-                <li><a>Protein: <span class="badge">100</span></a></li>
-                <li><a>Carbohydates: <span class="badge">200</span></a></li>
-                <li><a>Fat: <span class="badge">50</span></a></li>
-                <li><a>Calories: <span class="badge">1650</span></a></li>
+                <li class="active"><a>{{food.name}}</a></li>
+                <li><a>Protein: <span class="badge">{{food.protein}}</span></a></li>
+                <li><a>Carbohydates: <span class="badge">{{food.carbohydrates}}</span></a></li>
+                <li><a>Fat: <span class="badge">{{food.fats}}</span></a></li>
+                <li><a>Calories: <span class="badge">{{food.calories}}</span></a></li>
               </ul>
             </div>
-
+            {% endfor %}
           </div>
         </div>
       </div>
