--- a/Framework/Flask/food_tracker/templates/add_food.html
+++ b/Framework/Flask/food_tracker/templates/add_food.html
@@ -1,89 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
 
-    <title>Food Tracker | Add Food</title>
+{% block body %}
+<div class="container theme-showcase col-sm-6 col-sm-offset-3" role="main">
 
-    <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="../static/css/theme.css" rel="stylesheet">
+  <div class="row">
+    <div>
 
-  </head>
+      <div class="panel panel-primary">
 
-  <body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">Food Tracker</a>
+        <div class="panel-heading">
+          <h3 class="panel-title">Foods</h3>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li class="active"><a href="#">Add Food Item</a></li>
+
+        <div class="panel-body">
+
+          <form method="POST" action="{{url_for('food')}}">
+            <div class="form-group">
+              <label for="food-name">Food Name</label>
+              <input type="text" class="form-control" name="name" id="food-name" placeholder="Food Name">
+            </div>
+            <div class="form-group">
+              <label for="protein">Protein</label>
+              <input type="number" class="form-control" name="protein" id="protein" placeholder="Protein">
+            </div>
+            <div class="form-group">
+              <label for="carbohydrates">Carbohydrates</label>
+              <input type="number" class="form-control" name="carbohydrates" id="carbohydrates"
+                placeholder="Carbohydrates">
+            </div>
+            <div class="form-group">
+              <label for="fat">Fat</label>
+              <input type="number" class="form-control" name="fat" id="fat" placeholder="Fat">
+            </div>
+            <button type="submit" class="btn btn-primary">Add</button>
+          </form>
+
+          <div class="page-header"></div>
+
+          {% for food in results%}
+          <ul class="nav nav-pills" role="tablist">
+            <li class="active"><a>{{food.name}}</a></li>
+            <li><a>Protein: <span class="badge">{{food.protein}}</span></a></li>
+            <li><a>Carbohydrates: <span class="badge">{{food.carbohydrates}}</span></a></li>
+            <li><a>Fat: <span class="badge">{{food.fats}}</span></a></li>
+            <li><a>Calories: <span class="badge">{{food.calories}}</span></a></li>
           </ul>
+
+          <div class="page-header"></div>
+          {% endfor %}
         </div>
+
       </div>
-    </nav>
-
-    <div class="container theme-showcase col-sm-6 col-sm-offset-3" role="main">
-
-      <div class="row">
-        <div>
-
-          <div class="panel panel-primary">
-
-            <div class="panel-heading">
-              <h3 class="panel-title">Foods</h3>
-            </div>
-
-            <div class="panel-body">
-
-              <form method="POST" action="{{url_for('food')}}">
-                <div class="form-group">
-                  <label for="food-name">Food Name</label>
-                  <input type="text" class="form-control" name  = "name" id="food-name" placeholder="Food Name">
-                </div>
-                <div class="form-group">
-                  <label for="protein">Protein</label>
-                  <input type="number" class="form-control" name  = "protein" id="protein" placeholder="Protein">
-                </div>
-                <div class="form-group">
-                  <label for="carbohydrates">Carbohydrates</label>
-                  <input type="number" class="form-control" name  = "carbohydrates" id="carbohydrates" placeholder="Carbohydrates">
-                </div>
-                <div class="form-group">
-                  <label for="fat">Fat</label>
-                  <input type="number" class="form-control" name  = "fat" id="fat" placeholder="Fat">
-                </div>
-                <button type="submit" class="btn btn-primary">Add</button>
-              </form>
-
-              <div class="page-header"></div>
-
-              {% for food in results%}
-              <ul class="nav nav-pills" role="tablist">
-                <li class="active"><a>{{food.name}}</a></li>
-                <li><a>Protein: <span class="badge">{{food.protein}}</span></a></li>
-                <li><a>Carbohydrates: <span class="badge">{{food.carbohydrates}}</span></a></li>
-                <li><a>Fat: <span class="badge">{{food.fats}}</span></a></li>
-                <li><a>Calories: <span class="badge">{{food.calories}}</span></a></li>
-              </ul>
-
-              <div class = "page-header"></div>
-              {% endfor %}
-            </div>
-
-          </div>
-        </div>
-      </div>
-
     </div>
+  </div>
 
-  </body>
-
-</html>
+</div>
+{% endblock %}
